tests/langs/snapshots/r#mod__langs__base.ts_const.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 5
  l: "const sleep = promisify(setTimeout);\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 311
  l: "    const result = await fetch('https://api.example.com/food');\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
