tests/langs/snapshots/r#mod__langs__base.ts_var.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 354
  l: "var isSomething: boolean = true;\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
